--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "carousel": "^0.0.3",
+    "framer-motion": "^10.16.5",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
