--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,14 @@
-# استفاده از ایمیج رسمی Node.js
-FROM node:18-alpine
+version: '3.8'
 
-# تنظیم دایرکتوری کاری در کانتینر
-WORKDIR /app
-
-# کپی کردن فایل‌های package.json و package-lock.json
-COPY package*.json ./
-
-# نصب وابستگی‌ها
-RUN npm install
-
-# کپی کردن بقیه‌ی فایل‌های پروژه
-COPY . .
-
-# ساخت برنامه‌ی Next.js
-RUN npm run build
-
-# مشخص کردن پورت مورد استفاده
-EXPOSE 3000
-
-# فرمان پیش‌فرض برای اجرای برنامه
-CMD ["npm", "start"]
+services:
+  web:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+    volumes:
+      - .:/app
+      - /app/node_modules
+    environment:
+      - NODE_ENV=production
